20070116
 - (djm) Properly initialise array to fix under counting of adds/changes;
   spotted by Hamish Allan
 - (djm) Tidy and crank versions for 0.2 release

20060808
 - (djm) Build fixes for WIN32 with MSVC

20060705
 - (djm) Start